--- a/views/login.html
+++ b/views/login.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <title>忘记密码</title>
+    <link type="text/css" rel="stylesheet" href="test.css" />
+  </head>
+  <body>
+    <div class="">
+    </div>
+    <script type="text/javascript" src=""></script>
+  </body>
+</html>
